tolk-tester/tests/invalid-serialization/err-7928.tolk
contract BadDirective {
    incomingMessages: int
}

fun main() {
    return 0;
}

/**
@compilation_should_fail
@stderr `incomingMessages` can not be serialized: type `int`
@stderr because type `int` is not serializable
 */
